--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-resumen.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-resumen.xhtml
@@ -211,8 +211,8 @@
                 <p:outputLabel value="Utilidad neta: " styleClass="etiquetaFormulario"/>
                 <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.utilidadNeta}"/>
 
-                <p:outputLabel value="Observaciones: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.observaciones}"/>
+                <!--p:outputLabel value="Observaciones: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="#{MbFormUnidadLegal.tamanoSeleccionado.observaciones}"/-->
             </h:panelGrid>
 
         </h:panelGrid>
