--- a/GrupoEmpresarial-war/web/login.xhtml
+++ b/GrupoEmpresarial-war/web/login.xhtml
@@ -7,11 +7,13 @@
       xmlns:p="http://primefaces.org/ui">
 
     <h:head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <f:facet name="first">
-            <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
-        </f:facet>
-        <!--link type="image/vnd.microsoft.icon" rel="shortcut icon" href="resources/imagenes/dane.ico"/-->
+            <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+            <f:facet name="first">
+                <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
+            </f:facet>
+
+            <link type="image/vnd.microsoft.icon" rel="shortcut icon" href="resources/icon/dane.ico"/>
+
         <h:outputStylesheet library="css" name="general.css" />
         <h:outputStylesheet library="css" name="titulos.css" />
         <h:outputStylesheet library="css" name="componentes.css" />
