--- a/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
@@ -7,7 +7,13 @@
 
     <f:view contentType="text/html">
         <h:head>
-            <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
+            <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+            <f:facet name="first">
+                <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
+            </f:facet>
+
+            <link type="image/vnd.microsoft.icon" rel="shortcut icon" href="resources/icon/dane.ico"/>
+
             <h:outputStylesheet library="css" name="general.css" />
             <h:outputStylesheet library="css" name="titulos.css" />
             <h:outputStylesheet library="css" name="componentes.css" />
