30-Commit Mejoras en la lectura del archivo xls, implementación de validaciones y visualización del reporte de inconsistencias. Implementación de ingreso de datos de identidad en el xls al descargarlo. Implementación de la lectura y validación de los datos de identidad del xls al cargar.

--- a/GrupoEmpresarial-war/web/interfaz/utilidades/cpt-cargar-archivo-xls.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/utilidades/cpt-cargar-archivo-xls.xhtml
@@ -7,100 +7,81 @@
 
 
     <h:form id="frmCargarArchivoXls">
-        <p:growl id="msnInforGruEmp" showDetail="true" life="6000" />
+        <p:growl id="msnInforGruEmp" showDetail="true" life="8000" />
 
         <p:fileUpload id="btnCargarXlsGrupoEmpresa" fileUploadListener="#{MbLeerExcel.subirArchivoGrupoEmpresarial}" style="width: 50%"
-                      multiple="false" 
-                      mode="advanced" dragDropSupport="false" label="Seleccionar" cancelLabel="Cancelar" uploadLabel="Subir" 
-                      invalidFileMessage="Tipo de archivo no soportado"  oncomplete="PF('dlgCargarXls').show();" 
+                      multiple="false" mode="advanced" dragDropSupport="false" label="Seleccionar" cancelLabel="Cancelar" uploadLabel="Subir" 
+                      invalidFileMessage="Tipo de archivo no soportado"  oncomplete="PF('dlgCargarXls').show()"
                       update="msnInforGruEmp,dlReporteCargue" allowTypes="/(\.|\/)(xls)$/" >
             <f:attribute name="formulario" value="#{formulario}" />
         </p:fileUpload>
 
         <p:dialog id="dlReporteCargue" header="Reporte Cargar Información" widgetVar="dlgCargarXls"  appendTo="@(body)"
-                  resizable="false" modal="false" width="800" height="550">
-            <p:outputPanel  rendered="#{!MbLeerExcel.sePuedeInsertarDatos}">
-                <!--p:dataList id="dtInconsistenciasXls" value="#{MbLeerExcel.listaInconsistencias}" 
-                            var="inconsistencia" itemType="none" paginator="true" rows="22" styleClass="paginated" paginatorPosition="bottom">
-                    <p:commandLink oncomplete="PF('dlgInconsistencia').show()" title="Lista Variables" update="#{frmPadre}:frmCargarArchivoXls:dtVariableInconsistencia" process="@this"
-                                   styleClass="ui-icon ui-icon-search" style="float:left;margin-right:10px">
+                  resizable="false" modal="false" width="800" height="550" >
+            <p:outputPanel  rendered="#{MbLeerExcel.archivoValidoPorIdentidad}">
+                <p:outputPanel  rendered="#{!MbLeerExcel.sePuedeInsertarDatos}">
+                    <p:dataTable id="dtInconsistenciasXls" var="fila" value="#{MbLeerExcel.listaInconsistencias}"
+                                 rowIndexVar="rowIndex" emptyMessage="La consulta no genero resultados..." paginatorPosition="bottom" 
+                                 paginator="true" rows="25" scrollable="true" scrollHeight="280" 
+                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                 rowsPerPageTemplate="25,50,100">
 
-                        <f:setPropertyActionListener value="#{inconsistencia}" target="#{MbLeerExcel.inconsistenciaSeleccionada}" />
-                        <p:outputLabel value="#{inconsistencia.id}. #{inconsistencia.origen}" />
-                    </p:commandLink>
-                <f:facet name="header">Lista Registros Inconsistencias</f:facet>
-                    <p:outputLabel value="&nbsp;&nbsp;Hoja: #{inconsistencia.origen}" style="display:inline-block"/>
-                    <p:outputLabel value="&nbsp;&nbsp;&nbsp;&nbsp;ID #: #{inconsistencia.id}" style="display:inline-block"/>
-                    <p:outputLabel value="&nbsp;&nbsp;&nbsp;&nbsp;Incompletos: #{inconsistencia.listaAtributosRequeridos.size()}" style="display:inline-block"/>
-                </p:dataList-->
-                <p:dataTable id="dtInconsistenciasXls" var="fila" value="#{MbLeerExcel.listaInconsistencias}"
-                             rowIndexVar="rowIndex" emptyMessage="La consulta no genero resultados..." paginatorPosition="bottom" 
-                             paginator="true" rows="25" scrollable="true" scrollHeight="280" 
-                             paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                             rowsPerPageTemplate="25,50,100">
+                        <p:column headerText="#" width="25">
+                            <p:outputLabel value="#{rowIndex+1}"/>
+                        </p:column>
+                        <p:column headerText="Hoja" width="120">
+                            <p:outputLabel value="#{fila.origen}"/>
+                        </p:column>
+                        <p:column headerText="Id" width="20">
+                            <p:outputLabel value="#{fila.id}"/>
+                        </p:column>
+                        <p:column headerText="Error Variables">
+                            <div class="ui-grid ui-grid-responsive">
+                                <ui:repeat var="variable" value="#{fila.listaInconsistencias}">
+                                    <div class="ui-grid-row">
+                                        <div class="ui-grid-col-6">&#9679; #{variable.variable}</div>
+                                        <div class="ui-grid-col-6">#{variable.inconsistencia}</div>
+                                    </div>
+                                </ui:repeat>
+                            </div>
+                        </p:column>
+                    </p:dataTable>
+                    <h3 class="titulo-left-h3">Atención:</h3>
+                    <p:outputLabel value="Para poder cargar los registros y actualizar la información, cada una de las variables solicitadas como requeridas (*) para cada uno de los registros, debe ser diligenciada. Por favor ajustar los datos de cada variable para cada registro que el reporte indica y cargar de nuevo. "/>
+                </p:outputPanel>
 
-                    <p:column headerText="#" width="25">
-                        <p:outputLabel value="#{rowIndex+1}"/>
-                    </p:column>
-                    <p:column headerText="Hoja" width="120">
-                        <p:outputLabel value="#{fila.origen}"/>
-                    </p:column>
-                    <p:column headerText="Id" width="20">
-                        <p:outputLabel value="#{fila.id}"/>
-                    </p:column>
-                    <p:column headerText="Error Variables">
-                        <!--p:dataTable var="variable" value="#{fila.listaInconsistencias}" styleClass="hide-column-names">
-                            <p:column>
-                                <p:outputLabel value="#{variable.variable}"/>
-                            </p:column>
-                            <p:column>
-                                <p:outputLabel value="#{variable.inconsistencia}"/>
-                            </p:column>
-                        </p:dataTable-->
-                        <!--p:dataList value="#{fila.listaInconsistencias}" var="variable" type="unordered" itemType="none" 
-                                    style="padding: 0px; margin: 0px; background: none; border: none;">
-                            <h:panelGrid columns="2" cellpadding="0" border="0" cellspacing="0">
-                                <h:outputLabel value="#{variable.variable}"/>
-                                <h:outputLabel value="#{variable.inconsistencia}"/>
-                            </h:panelGrid>
-                        </p:dataList-->
-                        <div class="ui-grid ui-grid-responsive">
-                            <ui:repeat var="variable" value="#{fila.listaInconsistencias}">
-                                <div class="ui-grid-row">
-                                    <div class="ui-grid-col-6">&#9679; #{variable.variable}</div>
-                                    <div class="ui-grid-col-6">#{variable.inconsistencia}</div>
-                                </div>
-                            </ui:repeat>
-                        </div>
-                    </p:column>
-                </p:dataTable>
-                <h3 class="titulo-left-h3">Atención:</h3>
-                <p:outputLabel value="Para poder cargar los registros y actualizar la información, cada una de las variables solicitadas como requeridas (*) para cada uno de los registros, debe ser diligenciada. Por favor ajustar los datos de cada variable para cada registro que el reporte indica y cargar de nuevo. "/>
+                <p:outputPanel  rendered="#{MbLeerExcel.sePuedeInsertarDatos}">
+                    <h3 class="titulo-left-h3">Continuar:</h3>
+                    <p:outputLabel value="Se ha realizado la validación de completitud en las variables requeridas de los registros del archivo. Como resultado, la información se encuentra lista para ser actualizada."/>
+                    <p:commandButton value="Actualizar Datos" action="#{MbLeerExcel.insertarRegistrosBodega}" oncomplete="PF('dlgCargarXls').hide();"
+                                     update="#{frmPadre}:frmCargarArchivoXls:msnInforGruEmp" process="@this" style="float: right; top: 3px;">
+                        <p:confirm header="Confirmación" icon="ui-icon-alert" message="Esta a punto de actualizar la información, desea continuar?"/>
+                    </p:commandButton>
+
+                    <p:confirmDialog global="true" showEffect="fade" >
+                        <p:commandButton value="Aceptar" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                        <p:commandButton value="Cancelar" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                    </p:confirmDialog>
+                </p:outputPanel>
             </p:outputPanel>
-
-            <p:outputPanel  rendered="#{MbLeerExcel.sePuedeInsertarDatos}">
-                <h3 class="titulo-left-h3">Continuar:</h3>
-                <p:outputLabel value="Se ha realizado la validación de completitud en las variables requeridas de los registros del archivo. Como resultado, la información se encuentra lista para ser actualizada."/>
-                <p:commandButton value="Actualizar Datos" action="#{MbLeerExcel.insertarRegistrosBodega}" oncomplete="PF('dlgCargarXls').hide();"
-                                 update="#{frmPadre}:frmCargarArchivoXls:msnInforGruEmp" process="@this" style="float: right; top: 3px;">
-                    <p:confirm header="Confirmación" icon="ui-icon-alert" message="Esta a punto de actualizar la información, desea continuar?"/>
-                </p:commandButton>
-
-                <p:confirmDialog global="true" showEffect="fade" >
-                    <p:commandButton value="Aceptar" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
-                    <p:commandButton value="Cancelar" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
-                </p:confirmDialog>
+            <p:outputPanel  rendered="#{!MbLeerExcel.archivoValidoPorIdentidad}">
+                <h3 class="titulo-left-h3">Atención</h3>
+                <p>El archivo que intenta cargar no cumple con las validaciones de identidad por alguno de los siguientes motivos:</p>
+                <ul>
+                    <li>#{MbLeerExcel.mensajeErrorValidacionArchivo}</li>
+                </ul>
+                <!--h3 class="titulo-left-h3">Identificación del archivo:</h3-->
             </p:outputPanel>
         </p:dialog>
 
-        <p:dialog  header="Lista Variables Requeridas"  widgetVar="dlgInconsistencia" modal="true"  resizable="false" appendTo="@(body)">
+        <!--p:dialog  header="Lista Variables Requeridas"  widgetVar="dlgInconsistencia" modal="true"  resizable="false" appendTo="@(body)">
             <p:outputPanel deferred="true" >
                 <p:dataList id="dtVariableInconsistencia" var="variable"  style="border: none;"
                             value="#{MbLeerExcel.inconsistenciaSeleccionada.listaAtributosRequeridos}" >
-                    #{variable}
-                </p:dataList>
-            </p:outputPanel>
-        </p:dialog>
+        #{variable}
+    </p:dataList>
+</p:outputPanel>
+</p:dialog-->
 
         <p:blockUI block="@form" trigger="btnCargarXlsGrupoEmpresa" >
             Subiendo información...<br />
